# qiansai

./: .cproject  .gitignore  .project  .template  CMakeLists.txt  README.md  main.py  备份1.c  需求.md  需求.txt
.mrs/: 24e3d2baad8555bda61bde84d208a6d1-.snapshot  launch.json
User/: bmp280.c  bmp280.h  ch32v10x_it.c  dht11.c  dht11.h  main.c  sensor.h  tvoc301.c  tvoc301.h
imagic/: app.py  deploy.sh  image_sender.py  requirements.txt
imagic/templates/: control.html  index.html
iot_server/: README.md  deploy.sh  main.py  requirements.txt
iot_server/static/: index.html
main/: CMakeLists.txt  ak09911c.c  ak09911c.h  nmea_parser.c  nmea_parser.h  wifi_eap_fast_main.c
server/: main.py
server/static/: control.html  index.html
static/: imagic.html  index.html
